@@ -207,12 +207,9 @@ name|DELEGATION_TOKEN_PARAM
 init|=
 literal|"delegation"
 decl_stmt|;
-DECL|field|delegationToken
-specifier|private
-specifier|final
-name|String
-name|delegationToken
-decl_stmt|;
+comment|/**    * This constructor is deprecated in favor of passing delegation token via    * {@linkplain org.apache.solr.client.solrj.impl.HttpSolrClient.Builder#withInvariantParams(ModifiableSolrParams)}.    *    * @param baseURL The base url to communicate with the Solr server    * @param client Http client instance to use for communication    * @param parser Response parser instance to use to decode response from Solr server    * @param allowCompression Should compression be allowed ?    * @param delegationToken The delegation token string.    */
+annotation|@
+name|Deprecated
 DECL|method|DelegationTokenHttpSolrClient
 specifier|public
 name|DelegationTokenHttpSolrClient
@@ -259,12 +256,6 @@ literal|"Delegation token cannot be null"
 argument_list|)
 throw|;
 block|}
-name|this
-operator|.
-name|delegationToken
-operator|=
-name|delegationToken
-expr_stmt|;
 name|setQueryParams
 argument_list|(
 operator|new
@@ -293,6 +284,56 @@ argument_list|(
 name|DELEGATION_TOKEN_PARAM
 argument_list|,
 name|delegationToken
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * This constructor is defined at "protected" scope. Ideally applications should    * use {@linkplain org.apache.solr.client.solrj.impl.HttpSolrClient.Builder} instance    * to configure this Solr client instance.    *    * @param baseURL The base url to communicate with the Solr server    * @param client Http client instance to use for communication    * @param parser Response parser instance to use to decode response from Solr server    * @param allowCompression Should compression be allowed ?    * @param invariantParams The parameters which should be passed with every request.    */
+DECL|method|DelegationTokenHttpSolrClient
+specifier|protected
+name|DelegationTokenHttpSolrClient
+parameter_list|(
+name|String
+name|baseURL
+parameter_list|,
+name|HttpClient
+name|client
+parameter_list|,
+name|ResponseParser
+name|parser
+parameter_list|,
+name|boolean
+name|allowCompression
+parameter_list|,
+name|ModifiableSolrParams
+name|invariantParams
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|baseURL
+argument_list|,
+name|client
+argument_list|,
+name|parser
+argument_list|,
+name|allowCompression
+argument_list|,
+name|invariantParams
+argument_list|)
+expr_stmt|;
+name|setQueryParams
+argument_list|(
+operator|new
+name|TreeSet
+argument_list|<>
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|DELEGATION_TOKEN_PARAM
+argument_list|)
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
