@@ -160,6 +160,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Objects
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Set
 import|;
 end_import
@@ -1241,6 +1251,45 @@ operator|.
 name|parser
 operator|=
 name|parser
+expr_stmt|;
+block|}
+comment|/**    * The consturctor.    *    * @param baseURL The base url to communicate with the Solr server    * @param client Http client instance to use for communication    * @param parser Response parser instance to use to decode response from Solr server    * @param allowCompression Should compression be allowed ?    * @param invariantParams The parameters which should be included with every request.    */
+DECL|method|HttpSolrClient
+specifier|protected
+name|HttpSolrClient
+parameter_list|(
+name|String
+name|baseURL
+parameter_list|,
+name|HttpClient
+name|client
+parameter_list|,
+name|ResponseParser
+name|parser
+parameter_list|,
+name|boolean
+name|allowCompression
+parameter_list|,
+name|ModifiableSolrParams
+name|invariantParams
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|baseURL
+argument_list|,
+name|client
+argument_list|,
+name|parser
+argument_list|,
+name|allowCompression
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|invariantParams
+operator|=
+name|invariantParams
 expr_stmt|;
 block|}
 DECL|method|getQueryParams
@@ -3822,10 +3871,14 @@ specifier|private
 name|boolean
 name|compression
 decl_stmt|;
-DECL|field|delegationToken
+DECL|field|invariantParams
 specifier|private
-name|String
-name|delegationToken
+name|ModifiableSolrParams
+name|invariantParams
+init|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
 decl_stmt|;
 DECL|method|Builder
 specifier|public
@@ -3954,14 +4007,11 @@ name|String
 name|delegationToken
 parameter_list|)
 block|{
-name|this
-operator|.
-name|delegationToken
-operator|=
-name|delegationToken
-expr_stmt|;
 return|return
-name|this
+name|withDelegationToken
+argument_list|(
+name|delegationToken
+argument_list|)
 return|;
 block|}
 annotation|@
@@ -3976,11 +4026,115 @@ name|String
 name|delegationToken
 parameter_list|)
 block|{
+if|if
+condition|(
 name|this
 operator|.
+name|invariantParams
+operator|.
+name|get
+argument_list|(
+name|DelegationTokenHttpSolrClient
+operator|.
+name|DELEGATION_TOKEN_PARAM
+argument_list|)
+operator|!=
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+name|DelegationTokenHttpSolrClient
+operator|.
+name|DELEGATION_TOKEN_PARAM
+operator|+
+literal|" is already defined!"
+argument_list|)
+throw|;
+block|}
+name|this
+operator|.
+name|invariantParams
+operator|.
+name|add
+argument_list|(
+name|DelegationTokenHttpSolrClient
+operator|.
+name|DELEGATION_TOKEN_PARAM
+argument_list|,
 name|delegationToken
-operator|=
-name|delegationToken
+argument_list|)
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
+DECL|method|withInvariantParams
+specifier|public
+name|Builder
+name|withInvariantParams
+parameter_list|(
+name|ModifiableSolrParams
+name|params
+parameter_list|)
+block|{
+name|Objects
+operator|.
+name|requireNonNull
+argument_list|(
+name|params
+argument_list|,
+literal|"params must be non null!"
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|String
+name|name
+range|:
+name|params
+operator|.
+name|getParameterNames
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|this
+operator|.
+name|invariantParams
+operator|.
+name|get
+argument_list|(
+name|name
+argument_list|)
+operator|!=
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"parameter "
+operator|+
+name|name
+operator|+
+literal|" is redefined."
+argument_list|)
+throw|;
+block|}
+block|}
+name|this
+operator|.
+name|invariantParams
+operator|.
+name|add
+argument_list|(
+name|params
+argument_list|)
 expr_stmt|;
 return|return
 name|this
@@ -4010,7 +4164,16 @@ throw|;
 block|}
 if|if
 condition|(
-name|delegationToken
+name|this
+operator|.
+name|invariantParams
+operator|.
+name|get
+argument_list|(
+name|DelegationTokenHttpSolrClient
+operator|.
+name|DELEGATION_TOKEN_PARAM
+argument_list|)
 operator|==
 literal|null
 condition|)
@@ -4026,6 +4189,8 @@ argument_list|,
 name|responseParser
 argument_list|,
 name|compression
+argument_list|,
+name|invariantParams
 argument_list|)
 return|;
 block|}
@@ -4043,7 +4208,7 @@ name|responseParser
 argument_list|,
 name|compression
 argument_list|,
-name|delegationToken
+name|invariantParams
 argument_list|)
 return|;
 block|}
