@@ -482,6 +482,18 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|SolrTestCaseJ4
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|client
 operator|.
 name|solrj
@@ -6057,6 +6069,211 @@ argument_list|,
 name|req
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testInvariantParams
+specifier|public
+name|void
+name|testInvariantParams
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+try|try
+init|(
+name|HttpSolrClient
+name|createdClient
+init|=
+operator|new
+name|HttpSolrClient
+operator|.
+name|Builder
+argument_list|()
+operator|.
+name|withBaseSolrUrl
+argument_list|(
+name|jetty
+operator|.
+name|getBaseUrl
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+operator|.
+name|withInvariantParams
+argument_list|(
+name|SolrTestCaseJ4
+operator|.
+name|params
+argument_list|(
+literal|"param"
+argument_list|,
+literal|"value"
+argument_list|)
+argument_list|)
+operator|.
+name|build
+argument_list|()
+init|)
+block|{
+name|assertEquals
+argument_list|(
+literal|"value"
+argument_list|,
+name|createdClient
+operator|.
+name|getInvariantParams
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"param"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+init|(
+name|HttpSolrClient
+name|createdClient
+init|=
+operator|new
+name|HttpSolrClient
+operator|.
+name|Builder
+argument_list|()
+operator|.
+name|withBaseSolrUrl
+argument_list|(
+name|jetty
+operator|.
+name|getBaseUrl
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+operator|.
+name|withInvariantParams
+argument_list|(
+name|SolrTestCaseJ4
+operator|.
+name|params
+argument_list|(
+literal|"fq"
+argument_list|,
+literal|"fq1"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"fq2"
+argument_list|)
+argument_list|)
+operator|.
+name|build
+argument_list|()
+init|)
+block|{
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|createdClient
+operator|.
+name|getInvariantParams
+argument_list|()
+operator|.
+name|getParams
+argument_list|(
+literal|"fq"
+argument_list|)
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+init|(
+name|HttpSolrClient
+name|createdClient
+init|=
+operator|new
+name|HttpSolrClient
+operator|.
+name|Builder
+argument_list|()
+operator|.
+name|withBaseSolrUrl
+argument_list|(
+name|jetty
+operator|.
+name|getBaseUrl
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+operator|.
+name|withDelegationToken
+argument_list|(
+literal|"mydt"
+argument_list|)
+operator|.
+name|withInvariantParams
+argument_list|(
+name|SolrTestCaseJ4
+operator|.
+name|params
+argument_list|(
+name|DelegationTokenHttpSolrClient
+operator|.
+name|DELEGATION_TOKEN_PARAM
+argument_list|,
+literal|"mydt"
+argument_list|)
+argument_list|)
+operator|.
+name|build
+argument_list|()
+init|)
+block|{
+name|fail
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|ex
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|"parameter "
+operator|+
+name|DelegationTokenHttpSolrClient
+operator|.
+name|DELEGATION_TOKEN_PARAM
+operator|+
+literal|" is redefined."
+argument_list|)
+condition|)
+block|{
+throw|throw
+name|ex
+throw|;
+block|}
 block|}
 block|}
 block|}
